--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   sa_students_db:
-    image: mysql
+    image: mysql:5.7
     ports:
       - "3306:3306"
     environment:
@@ -12,7 +12,7 @@ services:
       MYSQL_HOST: sa_students_db
   sa_students_ms:
     build: .
-    command: bash -c "sleep 40 && rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails s -p 4000 -b '0.0.0.0'"
+    command: bash -c "sleep 160 && rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails s -p 4000 -b '0.0.0.0'"
     ports:
       - "4000:4000"
     depends_on:
